# gazebo-ros-stuff

./: README.md
articulated_robotics_tutorials/: README.md
articulated_robotics_tutorials/vid#8_git_repo/urdf_example/description/: example_gazebo.xacro  example_include.xacro  example_robot.urdf.xacro
articulated_robotics_tutorials/vid#8_git_repo/urdf_example/launch/: rsp_sim.launch.py
cart_pole_cpp_ws/src/cart_pole_gazebo/: CMakeLists.txt  package.xml
cart_pole_cpp_ws/src/cart_pole_gazebo/config/: basic_cart_pole.rviz
cart_pole_cpp_ws/src/cart_pole_gazebo/description/: cart_pole.urdf.xacro  cart_pole_core.xacro  inertial_macros.xacro  ros2_gazebo_plugins.xacro
cart_pole_cpp_ws/src/cart_pole_gazebo/launch/: TEST_cart_pole_sim_launch.py  cart_pole_sim_launch.py  worldPlugin.launch.py
cart_pole_cpp_ws/src/cart_pole_gazebo/worlds/: gazeboPlugin.world  world1.world
cart_pole_ws/src/cart_pole_rg/: package.xml  setup.cfg  setup.py
cart_pole_ws/src/cart_pole_rg/config/: controller_configuration.yaml  view.rviz
cart_pole_ws/src/cart_pole_rg/description/: cart_pole.urdf.xacro  cart_pole_core.xacro  cart_pole_github.xacro  ros2_gazebo_plugins.xacro
cart_pole_ws/src/cart_pole_rg/launch/: launch_sim.launch.py  launch_sim_controllers.launch.py  rsp_launch.py
ddr_robot_ws/src/ddr/: package.xml  setup.cfg  setup.py
ddr_robot_ws/src/ddr/config/: drive_bot.rviz  view_bot.rviz
ddr_robot_ws/src/ddr/description/: camera.xacro  ddr.urdf.xacro  ddr_core.xacro  gazebo_control.xacro  gazebo_control_edit.xacro  inertial_macros.xacro  lidar.xacro
ddr_robot_ws/src/ddr/launch/: launch_sim.launch.py  rsp_launch.py
ddr_robot_ws/src/ddr/worlds/: obstacles.world
gazebo_plugin_tutorial/: test_force.world
model_plugin_ros_tutorial/: package.xml
my_gazebo_plugins/: readme
my_gazebo_plugins/gazebo_ros_6dof_joint_state_publisher/: CMakeLists.txt  gazebo_ros_6dof_joint_state_publisher.cpp  package.xml
my_gazebo_plugins/gazebo_ros_link_pose_publisher/: CMakeLists.txt  gazebo_ros_link_pose_publisher.cpp  package.xml
my_gazebo_plugins/model_plugin_ros_tutorial/: CMakeLists.txt  basic_model_plugin_ros.cc  readme
my_gazebo_plugins/model_plugin_tutorial/: CMakeLists.txt  basic_model_plugin.cc  readme
my_gazebo_plugins/propeller_thrust_model_plugin/: CMakeLists.txt  propeller_thrust_model_plugin.cc  readme
my_gazebo_plugins/subscriber_plugin_tutorial/: basic_sub_plugin.cc
my_gazebo_plugins/test_plugin/: CMakeLists.txt  test.cc  test_force.world
my_gazebo_plugins/tf2_broadcaster/: CMakeLists.txt  package.xml  tf2_broadcaster.cpp
my_gazebo_plugins/world_plugin_tutorial/: CMakeLists.txt  package.xml  readme
my_gazebo_plugins/world_plugin_tutorial/models/: cylinder.sdf
my_gazebo_plugins/world_plugin_tutorial/world_plugins/: CMakeLists.txt  basic_world_plugin.cc
subscriber_plugin_tutorial/: CMakeLists.txt  readme
vslam_dev_ws/: entrypoint.sh
vslam_dev_ws/.devcontainer/: Dockerfile  devcontainer.json
vslam_dev_ws/install/: local_setup.sh  setup.sh
vslam_dev_ws/install/camera_gazebo/lib/camera_gazebo/: link_broadcaster
vslam_dev_ws/install/camera_gazebo/share/ament_index/resource_index/package_run_dependencies/: camera_gazebo
vslam_dev_ws/install/camera_gazebo/share/ament_index/resource_index/parent_prefix_path/: camera_gazebo
vslam_dev_ws/install/camera_gazebo/share/camera_gazebo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
vslam_dev_ws/install/camera_gazebo/share/camera_gazebo/cmake/: camera_gazeboConfig-version.cmake  camera_gazeboConfig.cmake
vslam_dev_ws/install/camera_gazebo/share/camera_gazebo/config/: basic.rviz
vslam_dev_ws/install/camera_gazebo/share/camera_gazebo/description/: bu.xacro  camera.urdf.xacro  camera_core.xacro  sdsdf.cpp
vslam_dev_ws/install/camera_gazebo/share/camera_gazebo/environment/: ament_prefix_path.dsv  path.dsv
vslam_dev_ws/install/camera_gazebo/share/camera_gazebo/launch/: camera_launch.py
vslam_dev_ws/install/camera_gazebo/share/camera_gazebo/worlds/: basic.world
vslam_dev_ws/log/: latest_build
vslam_dev_ws/src/camera_gazebo/: CMakeLists.txt  package.xml
vslam_dev_ws/src/camera_gazebo/description/: bu.xacro  camera.urdf.xacro  camera_core.xacro  camera_core_r1.xacro  camera_r1.urdf.xacro  sdsdf.cpp
vslam_dev_ws/src/camera_gazebo/launch/: camera_launch.py
vslam_dev_ws/src/camera_gazebo/tf2_broadcaster/: tf2_link_broadcaster.cpp
vslam_dev_ws/src/camera_gazebo/worlds/: basic.world
vtol_ws/src/vtol_gazebo/: CMakeLists.txt  package.xml
vtol_ws/src/vtol_gazebo/launch/: vtol_launch.py
vtol_ws/src/vtol_gazebo/models/standard_vtol/: standard_vtol.sdf
vtol_ws/src/vtol_gazebo/worlds/: model.world
world_plugin_tutorial/models/: cylinger.config
